# source/Config/SwaggerOptions.json
@@ -29,6 +29,80 @@
           "description": "Rotas para Produtos"
         }],
     "paths" : {
+        "/Produtos/GetProduto/{ProdutoID}" : {
+            "get" : {
+                "summary" : "Pegar um Produto",
+                "description": "Pegar um Produto",
+                "tags":["Produtos"],
+                "produces": ["application/json"],
+                "security": [{
+                    "bearerAuth":[]
+                }],
+                "parameters": [
+                    {
+                        "name": "ProdutoID",
+                        "in": "path",
+                        "description": "Digite o ID do Produto",
+                        "required": true,
+                        "type": "integer"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Get Successfully"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    },
+                    "500": {
+                        "description": "Internal Error"
+                    }
+                }
+            }
+        },
+        "/Produtos/listProdutos/" : {
+            "get" : {
+                "summary" : "Listar Produtos",
+                "description": "Listar Produtos",
+                "tags":["Produtos"],
+                "produces": ["application/json"],
+                "security": [{
+                    "bearerAuth":[]
+                }],
+                "parameters": [],
+                "responses": {
+                    "200": {
+                        "description": "List Successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                   "$ref": "#/definitions/Produtos/listProdutoResponse"
+                                }
+                             }
+                         }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                   "$ref": "#/definitions/Error/Unauthorized"
+                                }
+                             }
+                         }
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    },
+                    "500": {
+                        "description": "Internal Error"
+                    }
+                }
+            }
+        },
         "/Produtos/Cadastro": {
             "post": {
                "summary" : "Cadastro de Novos Produtos",
@@ -64,14 +138,22 @@
                      "description": "Created"
                   },
                   "401": {
-                     "description": "Unauthorized"
+                     "description": "Unauthorized",
+                     "content": {
+                        "application/json": {
+                            "schema": {
+                               "$ref": "#/definitions/Error/Unauthorized"
+                            }
+                         }
+                     }
+                     
                   },
                   "500": {
                      "description": "Internal Error"
                   }
                }
             }
-         },
+        },
         "/Produtos/Atualizar" : {
             "put" : {
                 "summary" : "Atualizar Produto",
@@ -101,7 +183,14 @@
                         "description": "Updated successfully"
                     },
                     "401": {
-                        "description": "Unauthorized"
+                        "description": "Unauthorized",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                   "$ref": "#/definitions/Error/Unauthorized"
+                                }
+                             }
+                         }
                     },
                     "404": {
                         "description": "Not Found"
@@ -135,7 +224,14 @@
                         "description": "Delete Successfully"
                     },
                     "401": {
-                        "description": "Unauthorized"
+                        "description": "Unauthorized",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                   "$ref": "#/definitions/Error/Unauthorized"
+                                }
+                             }
+                         }
                     },
                     "404": {
                         "description": "Not Found"
@@ -184,7 +280,14 @@
                         "description": "Success"
                     },
                     "401": {
-                        "description": "Unauthorized"
+                        "description": "Unauthorized",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                   "$ref": "#/definitions/Error/Unauthorized"
+                                }
+                             }
+                         }
                     },
                     "500": {
                         "description": "Internal Error"
@@ -248,7 +351,35 @@
                      "type": "integer"
                   }
                }
+            },
+            "listProdutoResponse": {
+                "type": "object",
+                "example":
+                {
+                    "Produtos": [
+                        {
+                        "ID_PRODUTO": 1,
+                        "DS_PRODUTO": "Ribbon de Cera A",
+                        "ID_TIPO_PRODUTO": 3,
+                        "FL_STATUS": true
+                        },
+                        {
+                        "ID_PRODUTO": 2,
+                        "DS_PRODUTO": "Ribbon de Resina",
+                        "ID_TIPO_PRODUTO": 3,
+                        "FL_STATUS": true
+                        }]
+                }
             }
-         }
+        },
+        "Error":{
+            "Unauthorized": {
+                "type": "object",
+                "example":
+                {
+                    "error": "No Token Provided"
+                }
+            }
+        }
     }
 }
